<resources>
    <string name="app_name">Group Stage Simulator</string>
    <string name="content_description_re_roll">Re-Roll</string>
    <string name="content_description_team_image">Team Image</string>
    <string name="content_description_team_image_next">Next team logo</string>
    <string name="content_description_team_image_previous">Previous team logo</string>
    <string name="error_please_enter_team_name">Please enter a team name.</string>
    <string name="error_please_setup_team_player">Please add players to the team.</string>
    <string name="error_unknown_error">Something went wrong, please try again.</string>
    <string name="menu_results">Results</string>
    <string name="menu_simulator">Simulator</string>
    <string name="menu_team_details">Team details</string>
    <string name="menu_teams">Teams</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">Let\'s get some results!</string>
    <string name="nav_header_title">Mr. Simulator</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_round_title">Round X</string>
    <string name="placeholder_score">X - X</string>
    <string name="placeholder_team">Team X</string>
    <string name="placeholder_two_digit_int">24</string>
    <string name="placeholder_x">X</string>
    <string name="players_header_defence">Defence</string>
    <string name="players_header_name">Name</string>
    <string name="players_header_speed">Speed</string>
    <string name="players_header_strength">Strength</string>
    <string name="results_header_against">Against</string>
    <string name="results_header_draw">Draw</string>
    <string name="results_header_for">For</string>
    <string name="results_header_loss">Loss</string>
    <string name="results_header_net_score">+/-</string>
    <string name="results_header_played">Played</string>
    <string name="results_header_points">Points</string>
    <string name="results_header_position">Position</string>
    <string name="results_header_team">Team</string>
    <string name="results_header_win">Win</string>
    <string name="simulator_assign_teams">Assign Teams</string>
    <string name="simulator_away">Away</string>
    <string name="simulator_empty_state_title">Before we can run the simulation, we need to set up some teams!</string>
    <string name="simulator_home">Home</string>
    <string name="simulator_instructions">Press the assign teams button to divide the teams over the round. Either play each round separately, or hit the play all button. Scroll down to see the results and use the clear button on the top right to start over.</string>
    <string name="simulator_play">Play!</string>
    <string name="simulator_play_all">Play All</string>
    <string name="simulator_played">Played!</string>
    <string name="simulator_round_plus_number">Round %1$d</string>
    <string name="simulator_rounds_title">Rounds</string>
    <string name="simulator_score">Score</string>
    <string name="simulator_standings_title">Standings</string>
    <string name="simulator_to_teams">To Teams!</string>
    <string name="teams_action_add_team">Add Team</string>
    <string name="teams_add_players">Add Players</string>
    <string name="teams_add_team">+ Add Team!</string>
    <string name="teams_hint_team_name">Team name</string>
    <string name="teams_instructions">Set up the teams, or tap the refresh icon to auto generate 4 teams.</string>
    <string name="teams_players">Players</string>
    <string name="teams_team_points">Team points: %1$d</string>
    <string name="teams_title">Teams</string>
</resources>