<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.oceanscurse.groupstagesimulator.ui.home.HomeFragment"
        android:label="@string/menu_simulator"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.oceanscurse.groupstagesimulator.ui.gallery.GalleryFragment"
        android:label="@string/menu_teams"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.oceanscurse.groupstagesimulator.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_slideshow" />
</navigation>